improved tests